--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="menu d-flex">
             <li class="menu__item">
               <!--noindex-->
-              <a target="blank" href="https://instagram.com/mastertur16">
+              <a target="blank" href="https://instagram.com/buy_tur">
                 <img src="img/Group 1.png" alt="">
               </a>
               <!--/noindex-->
